--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button data-number>.</button>
         <button data-number>0</button>
         <button data-operation>%</button>
-        <button data-radius>&#928</button>
+        <button data-number>&#928</button>
         <button data-equals class="span-two">=</button>
       </div>
     </div>
